[package]
name = "tokenunion"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.1"
tauri-plugin-updater = "2.0.1"
tauri-plugin-autostart = "2.0.1"
axum = { version = "0.7.6", features = ["http1", "json"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
reqwest = { version = "0.12.7", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
libp2p = { version = "0.54.1", features = ["tokio", "tcp", "noise", "yamux", "mdns", "relay", "dcutr", "request-response", "gossipsub", "json", "macros"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.22.1"
age = "0.11.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
bytes = "1.7.1"
futures-util = "0.3.30"
async-stream = "0.3.5"
http = "1.1.0"
url = "2.5.2"
urlencoding = "2.1.3"
